--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "homepage": "https://github.com/etclabscore/ethereum-json-rpc-specification#readme",
   "devDependencies": {
     "@open-rpc/generator-client": "^1.8.1",
-    "@open-rpc/mock-server": "^1.1.1"
+    "@open-rpc/mock-server": "^1.1.1",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
+    "@semantic-release/github": "^5.2.10"
   },
   "dependencies": {}
 }
