--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && npm run generator-client -- --ts-name=@etclabscore/ethereum-json-rpc --rs-name=ethereum-json-rpc -o build/",
     "publish": "npm run publish:typescript && npm run publish:rust",
     "publish:typescript": "cd build/typescript && npm publish --access=public",
-    "publish:rust": "cd build/rust && cargo package && cargo publish"
+    "publish:rust": "cd build/rust && cargo package && cargo publish --token $CARGO_TOKEN"
   },
   "repository": {
     "type": "git",
