fix: use openrpc semantic release plugin

--- a/.releaserc
+++ b/.releaserc
@@ -3,8 +3,13 @@
     "branch": "master",
     "verifyConditions": [
         "@semantic-release/changelog",
+        "@open-rpc/semantic-release-plugin",
         "@semantic-release/git",
         "@semantic-release/github"
+    ],
+    "prepare": [
+        "@semantic-release/changelog",
+        "@open-rpc/semantic-release-plugin"
     ],
     "publish": [
         "@semantic-release/github"
