--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@open-rpc/generator-client": "^1.9.6",
     "@open-rpc/mock-server": "^1.1.1",
+    "@open-rpc/semantic-release-plugin": "^1.0.2",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/github": "^5.2.10"
