--- a/.releaserc
+++ b/.releaserc
@@ -9,7 +9,7 @@
         [
             "@semantic-release/exec",
             {
-                "publishCmd": "npm run build && npm run publish"
+                "publishCmd": "./publish.sh"
             }
         ]
     ]
