--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,17 @@ defaults: &defaults
   working_directory: ~/project
 
 jobs:
+  test:
+    <<: *defaults
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - restore_cache: *restore-deps-cache
+      - run: npm install
+      - run: npm test
+      - save_cache: *save-deps-cache
+
   build:
     <<: *defaults
     docker:
