--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/etclabscore/ethereum-json-rpc-specification#readme",
   "devDependencies": {
     "@open-rpc/generator-client": "^1.14.2",
+    "@open-rpc/meta-schema": "^1.5.4",
     "@open-rpc/schema-utils-js": "^1.11.6"
   },
   "dependencies": {}
