--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Package containing tools to produce generated artifacts for the ethereum OpenRPC document. Please see the git repository for more information",
   "scripts": {
     "test": "node bin/test.js",
-    "generate-clients": "open-rpc-generator-client",
+    "generate-clients": "open-rpc-generator generate -c open-rpc-generator-config.json",
     "clean": "rm -rf build && mkdir -p build",
-    "build": "npm run clean && npm run generate-clients -- --ts-name=@etclabscore/ethereum-json-rpc --rs-name=ethereum-json-rpc -o build/",
+    "build": "npm run clean && npm run generate-clients && npm run build:docs",
     "publish": "npm run publish:typescript && npm run publish:rust",
-    "publish:typescript": "cd build/typescript && npm install && npm run build && npm publish --access=public",
-    "publish:rust": "cd build/rust && cargo build && cargo package && cargo publish --token $CARGO_TOKEN"
+    "build:docs": "cd build/docs/gatsby && npm install && npm run build",
+    "publish:typescript": "cd build/client/typescript && npm install && npm run build && npm publish --access=public",
+    "publish:rust": "cd build/client/rust && cargo build && cargo package && cargo publish --token $CARGO_TOKEN"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,9 @@
   },
   "homepage": "https://github.com/etclabscore/ethereum-json-rpc-specification#readme",
   "devDependencies": {
-    "@open-rpc/generator-client": "^1.14.6",
+    "@open-rpc/generator": "1.18.6",
     "@open-rpc/meta-schema": "^1.10.2",
     "@open-rpc/schema-utils-js": "^1.13.0"
-  }
+  },
+  "dependencies": {}
 }
